--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@ title: Sign-up Form
 <img src="img/kodiak_air_rifle.jpg" alt="">
 <p class="lead">Do you love to hunt? Do you love LimbSaver?</p>
 <p>We're looking for hunting and firearm enthusiasts to use our newest gear live in the field. Sign up using the application below, and we'll send you a Kodiak-Air Rifle Sling at no cost to you! The only thing we ask in return is to give us feedback directly, and honestly review the product on a major retail website. (Amazon, Walmart, etc.)</p>
+<p>This offer is only open to residents in the United States.</p>
 <form action="https://formspree.io/todd@mm.st"
       method="POST">
   <div class="form-group">
