--- a/form.html
+++ b/form.html
@@ -5,10 +5,9 @@ title: Sign-up Form
 ---
 <img src="img/kodiak_air_rifle.jpg" alt="">
 <p class="lead">Do you love to hunt? Do you love LimbSaver?</p>
-<p>We're looking for hunting and firearm enthusiasts to use our newest gear live in the field. Sign up using the application below, and we'll send you a Kodiak-Air Rifle Sling at no cost to you! The only thing we ask in return is to give us feedback directly, and honestly review the product on a major retail website. (Amazon, Walmart, etc.)</p>
-<p>This offer is only open to residents in the United States.</p>
-<form action="https://formspree.io/todd@mm.st"
-      method="POST">
+<p>We're looking for hunting and firearm enthusiasts to use our newest gear live in the field. Sign up using the application below, and <strong>we'll send you a Kodiak-Air Rifle Sling at no cost to you!</strong> The only thing we ask in return is to give us feedback directly, and honestly review the product on a major retail website. (Amazon, Walmart, etc.)</p> 
+<p style="color: red;">This offer is only open to residents of the United States. We do not share information with third-parties.</p>
+<form action="https://formspree.io/fieldtesters@limbsaver.com" method="POST">
   <div class="form-group">
     <label>Name: </label>
     <input type="text" name="name" class="form-control">
@@ -33,5 +32,5 @@ title: Sign-up Form
    <input type="hidden" name="_subject" value="Product Tester Submission" />
     <input type="hidden" name="_format" value="plain" />
     <input type="text" name="_gotcha" style="display:none" />
-    <input type="submit" class="btn btn-default" value="Send">
+    <input type="submit" class="btn btn-secondary" value="Send Application">
 </form>
